--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
