--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "startB": "cross-env NODE_ENV=production node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "startB": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
